# Emurgo

EmurgoProject/: CHANGELOG.md  EmurgoProject.cabal  WriteUp.md  specificationforimprovements.md
EmurgoProject/app/: GameUI.hs  Main.hs
EmurgoProject/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
