cabal-version:      2.4
name:               EmurgoProject
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rhystmorgan
maintainer:         morgan.rhystomas@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable EmurgoProject
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , random ^>=1.2.1.1
                    , bytestring ^>=0.10.4
                    , deepseq 
                    , mtl ^>=2.2
                    , splitmix 
                    , transformers
                    , containers

    hs-source-dirs:   app
    default-language: Haskell2010
